kubernetes/4deployment.yml
# ========== CENTRAL SERVICE ==========
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-service
  namespace: agroflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: central-service
  template:
    metadata:
      labels:
        app: central-service
    spec:
      containers:
        - name: central-service
          image: josue122121/central-service:v1.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 150Mi
              cpu: 100m
            limits:
              memory: 300Mi
              cpu: 250m
---
# ========== INVENTARIO SERVICE ==========
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-inventario
  namespace: agroflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-inventario
  template:
    metadata:
      labels:
        app: ms-inventario
    spec:
      containers:
        - name: ms-inventario
          image: josue122121/ms-inventario:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: 150Mi
              cpu: 100m
            limits:
              memory: 300Mi
              cpu: 250m
---
# ========== FACTURACION SERVICE ==========
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facturacion-service
  namespace: agroflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facturacion-service
  template:
    metadata:
      labels:
        app: facturacion-service
    spec:
      containers:
        - name: facturacion-service
          image: josue122121/facturacion-service:v1.1
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: 150Mi
              cpu: 100m
            limits:
              memory: 300Mi
              cpu: 250m
