kubernetes/servicio.yml
---
apiVersion: v1
kind: Service
metadata:
  name: central-service
  namespace: agroflow
  labels:
    app: central-service
spec:
  selector:
    app: central-service
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: facturacion-service
  namespace: agroflow
  labels:
    app: facturacion-service
spec:
  selector:
    app: facturacion-service
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
    name: http
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: ms-inventario-service
  namespace: agroflow
  labels:
    app: ms-inventario
spec:
  selector:
    app: ms-inventario
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  type: ClusterIP
